--- a/TODO
+++ b/TODO
@@ -1,9 +1,8 @@
 * signal queue creation or read queues on refresh?
 * add at-least-one semantics for queues (reserve/commit/rollback)
-  + added base
-  + added to mongo
+  + added base (done)
+  + added to mongo (done)
   + add to redis-oq
-  + add to redis-list?
 * bridges?
 * deadletter (tied to at-least-one)?
 
