--- a/TODO
+++ b/TODO
@@ -5,4 +5,6 @@
   + add to redis-oq
 * bridges?
 * deadletter (tied to at-least-one)?
-
+* allow passing redis conn/obj (ioredis Redis or Cluster) on anything using redis
+* proper factory on signal
+* queue traversal/query
