adjusted debug() on Queue and QFactory

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 * allow update obj on pl-mongo (api dep on being mongodb)
 * priorities
 * upgrade mongod driver to v3
+* revisit consumer id on pop
