--- a/TODO
+++ b/TODO
@@ -5,3 +5,5 @@
 * allow update obj on pl-mongo (api dep on being mongodb)
 * priorities
 * upgrade mongod driver to v3
+* add factory archetypes (all-mongo, all-mongo-bucket...)
+
