--- a/TODO
+++ b/TODO
@@ -5,4 +5,4 @@
 * allow update obj on pl-mongo (api dep on being mongodb)
 * priorities
 * add factory archetypes (all-mongo, all-mongo-bucket...)
-
+* distinguish sched from reserved
