--- a/TODO
+++ b/TODO
@@ -6,9 +6,9 @@
 * add factory archetypes (all-mongo, all-mongo-bucket...)
 * pipelines
   + allow mongo-like update on payload
-  + allow geenral graphs
-  + add prokection ability (as in generating extra payloads)
+  + allow general graphs
+  + add projection ability (as in generating extra payloads)
   + add some commonplace transforms (etl-like)
   + create a server for that, allow processor code defined externally
 + more and better examples
- 
+
