fix table naming on postgres to prevent sql syntax errors

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 bugs
 -------------------------------------------------------------
+* missing support for resvSize on redis-oq
 
 prio 1
 -------------------------------------------------------------
